[gd_scene load_steps=56 format=2]

[ext_resource path="res://Models/Player/Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Models/Player/Scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://Models/Player/Rifle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Models/Player/Scripts/Muzzle.gd" type="Script" id=4]
[ext_resource path="res://Models/Player/Weapon/Fire/fire1.png" type="Texture" id=5]
[ext_resource path="res://Models/Player/Weapon/Fire/fire2.png" type="Texture" id=6]
[ext_resource path="res://Models/Player/Scripts/WeaponController.gd" type="Script" id=7]
[ext_resource path="res://Models/Sprites/Crosshair/crosshair.png" type="Texture" id=8]
[ext_resource path="res://UI/Themes/HUDTheme.tres" type="Theme" id=9]
[ext_resource path="res://UI/Fonts/minotaur.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://UI/Scripts/Score.gd" type="Script" id=11]
[ext_resource path="res://Models/Player/Scripts/HealthBar.gd" type="Script" id=12]
[ext_resource path="res://Models/Player/Audio/Shoot2.wav" type="AudioStream" id=13]
[ext_resource path="res://UI/Scripts/PodsLeft.gd" type="Script" id=14]
[ext_resource path="res://UI/Scripts/PodLog.gd" type="Script" id=15]
[ext_resource path="res://UI/Fonts/Cascadia.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://UI/Scripts/PauseMenu.gd" type="Script" id=17]
[ext_resource path="res://UI/Scripts/StartGame.gd" type="Script" id=18]
[ext_resource path="res://UI/Themes/MenuPanelStyle.tres" type="StyleBox" id=19]
[ext_resource path="res://Models/Player/Audio/Hurt3.wav" type="AudioStream" id=20]
[ext_resource path="res://Models/Player/Audio/StartReload.wav" type="AudioStream" id=21]
[ext_resource path="res://Models/Sprites/Crosshair/hitmark.png" type="Texture" id=22]
[ext_resource path="res://Models/Player/Scripts/Hitmark.gd" type="Script" id=23]
[ext_resource path="res://Models/Player/Audio/Hitmark.wav" type="AudioStream" id=24]

[sub_resource type="CapsuleShape" id=1]
radius = 1.78278
height = 1.15916

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.639604, 1, 1.84697 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -2.96538, 0, 0, Vector2( 0.44358, 0.254545 ), -0.856667, -0.856667, 0, 0, Vector2( 0.984436, 0.0090909 ), -0.380338, 0.0, 0, 0 ]

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "fire"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "reload"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=11]
states/fire/node = SubResource( 4 )
states/fire/position = Vector2( 696, 168 )
states/idle/node = SubResource( 5 )
states/idle/position = Vector2( 503, 168 )
states/reload/node = SubResource( 6 )
states/reload/position = Vector2( 503, 338 )
transitions = [ "idle", "fire", SubResource( 7 ), "fire", "idle", SubResource( 8 ), "idle", "reload", SubResource( 9 ), "reload", "idle", SubResource( 10 ) ]
graph_offset = Vector2( -68, 82.32 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="Animation" id=13]
length = 0.12
loop = true
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("AnimationTree")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_bullet"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("RotationHelper/AnimationHelper/Rifle/Muzzle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_and_rotate"
} ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -0.35551, -0.25, 0, 0.25, 0, -0.358677, -0.25, 0, 0.25, 0, -0.35551, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.12 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.66597, -0.25, 0, 0.25, 0, 1.66605, -0.25, 0, 0.25, 0, 1.66597, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.12 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.22441, -0.25, 0, 0.25, 0, 0.166048, -0.25, 0, 0.25, 0, 0.22441, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.12 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.12 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 6.388, -0.25, 0, 0.25, 0, 6.391, -0.25, 0, 0.25, 0, 6.388, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.12 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( -0.442, -0.25, 0, 0.25, 0, -0.639, -0.25, 0, 0.25, 0, -0.442, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.12 )
}

[sub_resource type="Animation" id=14]
loop = true
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -0.35551, -0.25, 0, 0.25, 0, -0.355678, -0.25, 0, 0.25, 0, -0.35551, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.66597, -0.25, 0, 0.25, 0, 1.64409, -0.25, 0, 0.25, 0, 1.66597, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.22441, -0.25, 0, 0.25, 0, 0.224429, -0.25, 0, 0.25, 0, 0.22441, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=15]
loop = true
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("AnimationTree")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.53, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_reload_sound"
}, {
"args": [  ],
"method": "finish_reload"
} ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -0.35551, -0.25, 0, 0.25, 0, -0.358589, -0.25, 0, 0.25, 0, -0.35551, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1.66597, -0.25, 0, 0.25, 0, 1.53216, -0.25, 0, 0.25, 0, 1.66597, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("RotationHelper/AnimationHelper/Rifle:translation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.22441, -0.25, 0, 0.25, 0, 0.0983216, -0.25, 0, 0.25, 0, 0.22441, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -3.29312e-09, -0.25, 0, 0.25, 0, 43.041, -0.25, 0, 0.25, 0, -3.29312e-09, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 6.388, -0.25, 0, 0.25, 0, -11.9655, -0.25, 0, 0.25, 0, 6.388, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("RotationHelper/AnimationHelper/Rifle:rotation_degrees:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -0.442, -0.25, 0, 0.25, 0, -17.0655, -0.25, 0, 0.25, 0, -0.442, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.65, 1 )
}

[sub_resource type="DynamicFont" id=16]
size = 70
outline_size = 2
outline_color = Color( 0.494118, 0.494118, 0.494118, 1 )
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.12549, 0.137255, 0.172549, 1 )
border_width_right = 9
border_width_bottom = 9
border_color = Color( 0.65098, 0.65098, 0.65098, 1 )
border_blend = true
corner_radius_bottom_right = 30

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.215686, 0.423529, 0.278431, 1 )
border_width_top = 5
border_color = Color( 0.584314, 0.858824, 0.666667, 1 )
border_blend = true
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_detail = 12
shadow_color = Color( 0.380392, 0.72549, 0.376471, 0.6 )
shadow_size = 3
shadow_offset = Vector2( -1, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.168627, 0.0901961, 0.0901961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 3
corner_detail = 20
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 1.0
anti_aliasing_size = 2

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0823529, 0.556863, 0.788235, 1 )
border_width_top = 5
border_color = Color( 0.521569, 0.709804, 0.909804, 1 )
border_blend = true
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_detail = 12
shadow_color = Color( 0.376471, 0.67451, 0.72549, 0.533333 )
shadow_size = 6
shadow_offset = Vector2( -1, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.466667, 0.658824, 0.827451, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color( 0.0901961, 0.54902, 1, 0.670588 )
shadow_size = 17
anti_aliasing_size = 2

[sub_resource type="DynamicFont" id=22]
size = 70
outline_size = 3
outline_color = Color( 0.372549, 0.254902, 0.133333, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=23]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 70, -0.25, 0, 0.25, 0, 45, -0.25, 0, 0.25, 0, 70, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="DynamicFont" id=24]
size = 40
outline_size = 2
outline_color = Color( 0.494118, 0.494118, 0.494118, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=25]
size = 30
outline_size = 2
outline_color = Color( 0.333333, 0.313726, 0.313726, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.12549, 0.137255, 0.172549, 1 )
border_width_left = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color( 0.65098, 0.65098, 0.65098, 1 )
border_blend = true
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=31]
size = 32
outline_size = 2
outline_color = Color( 0.494118, 0.494118, 0.494118, 1 )
extra_spacing_char = 5
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.0588235, 0.0470588, 0.105882, 0.321569 )
border_width_top = 3
border_width_right = 3
border_color = Color( 0.380392, 0.372549, 0.372549, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=28]
size = 13
use_filter = true
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.101961, 0.101961, 0.101961, 0.545098 )

[sub_resource type="DynamicFont" id=30]
size = 41
use_filter = true
font_data = ExtResource( 10 )

[node name="PlayerCharacter" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00405693, 0.0412759, -0.00859356 )
collision_layer = 2
script = ExtResource( 1 )
JUMP_VELOCITY = 35
GRAVITY = -50
WEIGHT = 450.0
kube_power_per_second = 100

[node name="BodyCollider" type="CollisionShape" parent="."]
transform = Transform( 0.82, 0, 0, 0, 2.1, 0, 0, 0, 0.425, 0, 2.73779, 0.0560107 )
shape = SubResource( 1 )

[node name="FeetCollider" type="CollisionShape" parent="."]
transform = Transform( 1.41271, 0, 0, 0, 0.0704462, 0, 0, 0, 0.465509, 0, -0.847732, 0.0399572 )
shape = SubResource( 2 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.87619, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.0411232, -0.523437 )
current = true
fov = 75.0
near = 0.07
far = 1000.0
script = ExtResource( 2 )
magnitude_curve = SubResource( 3 )

[node name="FirePoint" type="Spatial" parent="RotationHelper/Camera"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="FireRay" type="RayCast" parent="RotationHelper/Camera/FirePoint"]
enabled = true
cast_to = Vector3( 0, 0, 1500 )
collision_mask = 5
collide_with_areas = true

[node name="AnimationHelper" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="Rifle" parent="RotationHelper/AnimationHelper" instance=ExtResource( 3 )]
transform = Transform( 0.993734, 0.0100972, 0.111308, -0.0111315, 0.9999, 0.00867456, -0.11121, -0.00985924, 0.993748, -0.355532, 1.66311, 0.224412 )

[node name="Muzzle" type="Spatial" parent="RotationHelper/AnimationHelper/Rifle"]
transform = Transform( 0.818148, -0.230432, -4.47035e-08, 0.230462, 0.81761, 0, 0, -2.23517e-08, 0.680528, 0.00309715, 0.0189819, 0.640986 )
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="RotationHelper/AnimationHelper/Rifle/Muzzle"]
transform = Transform( -6.21867e-06, -6.28345e-05, 0.3, 0.3, -0.000242524, 6.40989e-06, 0.000242521, 0.299999, 6.28643e-05, 0, 0, 0 )
texture = ExtResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="RotationHelper/AnimationHelper/Rifle/Muzzle"]
transform = Transform( 0.3, 2.23517e-08, -2.18337e-07, 5.61704e-08, -2.04891e-08, -0.244029, 6.70552e-08, 0.370734, -1.86265e-09, 0, 0, 0 )
texture = ExtResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
script = ExtResource( 7 )
damage = 15
hitmark = NodePath("../HUD/Hitmark")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 13 )
anims/idle = SubResource( 14 )
anims/reload = SubResource( 15 )

[node name="HUD" type="Control" parent="."]
anchor_left = 0.00169462
anchor_right = 1.00169
anchor_bottom = 1.0
margin_top = -2.05039
margin_bottom = -2.05042
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchor_left = 0.491667
anchor_top = 0.485185
anchor_right = 0.508333
anchor_bottom = 0.514815
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Hitmark" type="TextureRect" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.500239
anchor_top = 0.474686
anchor_right = 0.500239
anchor_bottom = 0.524445
margin_left = 6.10352e-05
margin_right = 38.0001
margin_bottom = -15.7401
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 45.0
texture = ExtResource( 22 )
stretch_mode = 6
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}
lifetime = 0.4

[node name="AmmoBar" type="Panel" parent="HUD"]
anchor_left = 0.858854
anchor_top = 0.912963
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -130.466, -182.335 )
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AmmoText" type="Label" parent="HUD/AmmoBar"]
anchor_left = 0.257909
anchor_top = 0.0638298
anchor_right = 0.936876
anchor_bottom = 1.06383
margin_right = -3.99991
custom_fonts/font = SubResource( 16 )
text = "30/30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StatusBar" type="Panel" parent="HUD"]
margin_left = -0.902527
margin_right = 454.097
margin_bottom = 153.0
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthBar" type="ProgressBar" parent="HUD/StatusBar"]
anchor_left = 0.0373626
anchor_top = 0.428907
anchor_right = 0.892308
anchor_bottom = 0.566161
custom_styles/fg = SubResource( 18 )
custom_styles/bg = SubResource( 19 )
custom_colors/font_color = Color( 0.101961, 0.0941176, 0.0941176, 1 )
value = 60.0
rounded = true
percent_visible = false
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KubeBar" type="ProgressBar" parent="HUD/StatusBar"]
anchor_left = 0.0373626
anchor_top = 0.627451
anchor_right = 0.604396
anchor_bottom = 0.764706
custom_styles/fg = SubResource( 20 )
custom_styles/bg = SubResource( 19 )
custom_colors/font_color = Color( 0.101961, 0.0941176, 0.0941176, 1 )
value = 66.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KubeBarHighlight" type="Panel" parent="HUD/StatusBar"]
anchor_left = 0.0373626
anchor_top = 0.607843
anchor_right = 0.6
anchor_bottom = 0.784314
custom_styles/panel = SubResource( 21 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QLabel" type="Label" parent="HUD/StatusBar/KubeBarHighlight"]
anchor_left = 1.03715
anchor_top = -0.212172
anchor_right = 1.34965
anchor_bottom = 2.38042
custom_fonts/font = SubResource( 22 )
text = "Q"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/StatusBar/KubeBarHighlight/QLabel"]
autoplay = "Grow"
anims/Grow = SubResource( 23 )

[node name="Score" type="Label" parent="HUD/StatusBar"]
anchor_left = 0.340659
anchor_top = 0.111111
anchor_right = 0.962637
anchor_bottom = 0.372549
custom_fonts/font = SubResource( 24 )
text = "100000"
valign = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreTitle" type="Label" parent="HUD/StatusBar"]
anchor_left = 0.0373626
anchor_top = 0.0784314
anchor_right = 0.323077
anchor_bottom = 0.405229
custom_fonts/font = SubResource( 25 )
text = "SCORE:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PodBar" type="Panel" parent="HUD"]
margin_left = 474.0
margin_right = 790.0
margin_bottom = 87.0
custom_styles/panel = SubResource( 26 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PodsLeft" type="Label" parent="HUD/PodBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 239.0
margin_top = -26.5
margin_right = 276.0
margin_bottom = 13.5
custom_fonts/font = SubResource( 31 )
text = "50"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PodsLeftTitle" type="Label" parent="HUD/PodBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 23.0
margin_top = -30.2722
margin_right = 219.0
margin_bottom = 19.7278
custom_fonts/font = SubResource( 25 )
text = "PODS LEFT:"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LogPanel" type="Panel" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -145.0
margin_right = 406.0
custom_styles/panel = SubResource( 27 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PodLog" type="RichTextLabel" parent="HUD/LogPanel"]
anchor_left = 0.0172414
anchor_right = 1.0
anchor_bottom = 0.993464
custom_fonts/normal_font = SubResource( 28 )
text = "test
test
test
test
test
test
test
test"
scroll_active = false
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}
max_length = 9

[node name="PausePanel" type="Panel" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 29 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
main_menu_scene = "res://Scenes/UI/Menu.tscn"

[node name="PauseMenu" type="Panel" parent="HUD/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -114.0
margin_right = 203.5
margin_bottom = 114.0
custom_styles/panel = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="HUD/PausePanel/PauseMenu"]
anchor_left = 0.206388
anchor_top = 0.175439
anchor_right = 0.793612
anchor_bottom = 0.421053
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 30 )
text = "RESUME"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExitButton" type="Button" parent="HUD/PausePanel/PauseMenu"]
anchor_left = 0.206388
anchor_top = 0.578947
anchor_right = 0.793612
anchor_bottom = 0.824561
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 30 )
text = "EXIT"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="GunSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83986, 0 )
stream = ExtResource( 13 )
unit_db = -2.0
unit_size = 10.0
max_db = 0.0
pitch_scale = 0.9

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83986, 0 )
stream = ExtResource( 20 )
unit_db = -1.5
unit_size = 10.0
max_db = 2.754
pitch_scale = 1.1

[node name="ReloadSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83986, 0 )
stream = ExtResource( 21 )
unit_db = -1.5
unit_size = 10.0
max_db = -2.0
pitch_scale = 1.1

[node name="HitmarkSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83986, 0 )
stream = ExtResource( 24 )
unit_size = 10.0
max_db = 0.0
pitch_scale = 1.15
[connection signal="pressed" from="HUD/PausePanel/PauseMenu/ResumeButton" to="HUD/PausePanel" method="unpause"]
[connection signal="pressed" from="HUD/PausePanel/PauseMenu/ExitButton" to="HUD/PausePanel" method="_back_to_menu"]
[connection signal="timeout" from="RespawnTimer" to="." method="_respawn"]
